backend/uvicorn_bericht.log
Traceback (most recent call last):
  File "C:\Users\jan\staging\Windsurf\wlo-suche\badboerdi\backend\run.py", line 10, in <module>
    uvicorn.run("app.main:app", host="0.0.0.0", port=8000, reload=reload)
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\main.py", line 606, in run
    server.run()
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\server.py", line 75, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\asyncio\base_events.py", line 691, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\server.py", line 79, in serve
    await self._serve(sockets)
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\server.py", line 86, in _serve
    config.load()
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\config.py", line 441, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\jan\miniconda3\Lib\importlib\__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 999, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\jan\staging\Windsurf\wlo-suche\badboerdi\backend\app\main.py", line 13, in <module>
    from app.routers import chat, config, rag, speech, sessions, safety, quality, widget
  File "C:\Users\jan\staging\Windsurf\wlo-suche\badboerdi\backend\app\routers\chat.py", line 68, in <module>
    from app.services.canvas_service import (
  File "C:\Users\jan\staging\Windsurf\wlo-suche\badboerdi\backend\app\services\canvas_service.py", line 258
    "6. Zitat-Block: '> „[Zitat]" — [Name, Funktion]' — Platzhalter, wenn nicht bekannt\n"
                                  ^
SyntaxError: invalid character '—' (U+2014)
